# SRAM_SystemC

./: CMakeLists.txt  README.md  main.cpp
modules/: address_decoder.h  internal_sram_controller.h  sense_amp.h  sram_block.h  sram_core.h
